--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@coreui/coreui": "github:coreui/coreui",
     "@coreui/icons": "^0.3.0",
     "@coreui/react": "^2.1.3",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
