--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@coreui/react": "^2.1.3",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
+    "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0"
