--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@coreui/coreui": "github:coreui/coreui",
-    "@coreui/icons": "^0.3.0",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/react": "^2.1.3",
+    "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
     "react-router-config": "^4.4.0-beta.6",
