--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^6.0.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
     "yup": "^0.26.10"
   },
   "scripts": {
